--- a/arch/arm64/configs/yl6735m_65u_ov_m_defconfig
+++ b/arch/arm64/configs/yl6735m_65u_ov_m_defconfig
@@ -1122,7 +1122,7 @@ CONFIG_MTK_POWER_GS=y
 CONFIG_MTK_SHARED_SDCARD=y
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
 CONFIG_MTK_SENSOR_SUPPORT=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov8865_mipi_raw ov8865_mipi_raw_sunny hi551_mipi_raw hi551avc_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov8865_mipi_raw ov8865_mipi_raw_sunny hi551_mipi_raw hi551avc_mipi_raw ov2659_raw ov12830_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="hi551avc_otp"
 CONFIG_MTK_HIBERNATION=y
 # CONFIG_MT_ENG_BUILD is not set
